@@ -12,6 +12,8 @@ Trunk (unreleased changes)
 
     IMPROVEMENTS:
 
+      BOOKKEEPER-526: multiple threads for delivery manager (sijie via ivank)
+
       BOOKKEEPER-544: Modify hedwig server tests to allow client testcases to start/stop them as part of their tests (mridul via ivank)
 
       BOOKKEEPER-312: Implementation of JMS provider (mridul via ivank)
